--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -21,13 +21,54 @@
                 </a>
             </li>
             <li class="nav-item {% if 'dashboard' in segment %} active {% endif %}">
-                <a href="/dashboard.html" class="nav-link">
+                <a href="/dashboard/" class="nav-link">
                     <span class="sidebar-icon">
                         <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path><path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path></svg>
                     </span> 
                     <span class="sidebar-text">Dashboard</span>
                 </a>
             </li>
+            <!-- New Sections -->
+            <li class="nav-item">
+                <a href="/estaciones/" class="nav-link">
+                    <span class="sidebar-icon">🏠</span>
+                    <span class="sidebar-text">Estaciones</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/vehiculos/" class="nav-link">
+                    <span class="sidebar-icon">🚗</span>
+                    <span class="sidebar-text">Vehículos</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/conductores/" class="nav-link">
+                    <span class="sidebar-icon">👤</span>
+                    <span class="sidebar-text">Conductores</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/viajes/" class="nav-link">
+                    <span class="sidebar-icon">🛣️</span>
+                    <span class="sidebar-text">Viajes</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/turnos/" class="nav-link">
+                    <span class="sidebar-icon">🕒</span>
+                    <span class="sidebar-text">Turnos</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/dispositivos/" class="nav-link">
+                    <span class="sidebar-icon">📱</span>
+                    <span class="sidebar-text">Dispositivos</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+            
         </ul>
     </div>
 </nav>
