--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark navbar-theme-primary px-4 col-12 d-lg-none">
     <a class="navbar-brand me-lg-5" href="/">
-        <img class="navbar-brand-dark" src="/static/assets/img/brand/light.svg" alt="Volt logo" />
+        <img class="navbar-brand-dark" src="https://media-asgard.s3.eu-west-1.amazonaws.com/23/11/23/77d5de4c-4098-4498-88ba-e13f86bdb450_group.png" alt="WWM" />
     </a>
     <div class="d-flex align-items-center">
         <button class="navbar-toggler d-lg-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,7 +15,7 @@
             <li class="nav-item">
                 <a href="/" class="nav-link d-flex align-items-center">
                     <span class="sidebar-icon">
-                        <img src="/static/assets/img/brand/light.svg" height="20" width="20" alt="Volt Logo">
+                        <img src="https://media-asgard.s3.eu-west-1.amazonaws.com/23/11/23/77d5de4c-4098-4498-88ba-e13f86bdb450_group.png" height="20" width="20" alt="Volt Logo">
                     </span>
                     <span class="mt-1 ms-1 sidebar-text">Volt Overview</span>
                 </a>
