--- a/apps/templates/home/estaciones.html
+++ b/apps/templates/home/estaciones.html
@@ -1,14 +1,16 @@
 {% extends "layouts/base.html" %}
 {% block content %}
-<div class="container mt-3">
+<div class="container">
     <h2>Estaciones</h2>
-    <table class="table table-striped">
+    <a href="{% url 'crear_estacion' %}" class="btn btn-primary">Crear Nueva Estación</a>
+    <table class="table">
         <thead>
             <tr>
                 <th>Nombre</th>
                 <th>Ubicación</th>
                 <th>Capacidad</th>
                 <th>Tipo</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
@@ -18,6 +20,9 @@
                 <td>{{ estacion.ubicacion }}</td>
                 <td>{{ estacion.capacidad }}</td>
                 <td>{{ estacion.tipo }}</td>
+                <td>
+                    <a href="{% url 'editar_estacion' estacion.id %}" class="btn btn-sm btn-outline-secondary">Editar</a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
