--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -13,13 +13,13 @@
     <!-- Favicon --> 
     <!-- Aquí es donde se define el favicon. Necesitas reemplazar las rutas en los atributos href con las rutas a tus nuevos archivos de imagen de favicon. -->
     <link rel="apple-touch-icon" sizes="120x120" href="/static/assets/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/assets/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/assets/img/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://storage.googleapis.com/mercadonatech/assets/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://storage.googleapis.com/mercadonatech/assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/static/assets/img/favicon/site.webmanifest">
     <link rel="mask-icon" href="/static/assets/img/favicon/safari-pinned-tab.svg" color="#ffffff">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link type="text/css" href="/static/assets/vendor/sweetalert2/dist/sweetalert2.min.css" rel="stylesheet">
 
     <link type="text/css" href="/static/assets/vendor/notyf/notyf.min.css" rel="stylesheet">
