--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -2,7 +2,7 @@
 
 {% block title %} {% endblock %}
 
-<!-- Specific Page CSS goes HERE  -->
+<!-- CSS específico de la página va AQUÍ  -->
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
@@ -16,7 +16,7 @@
                             <form method="post" action="" class="mt-4">
                                 {% csrf_token %}
                                 <div class="form-group mb-4">
-                                    <label for="email">Username</label>
+                                    <label for="email">Nombre de usuario</label>
                                     <div class="input-group">
                                         <span class="input-group-text" id="basic-addon1">
                                             <span class="fas fa-user-circle"></span>
@@ -26,7 +26,7 @@
                                     <span class="text-error">{{ form.username.errors }}</span>
                                 </div>
                                 <div class="form-group mb-4">
-                                    <label for="email">Your Email</label>
+                                    <label for="email">Correo electrónico</label>
                                     <div class="input-group">
                                         <span class="input-group-text" id="basic-addon1">
                                             <span class="fas fa-envelope"></span>
@@ -37,7 +37,7 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="form-group mb-4">
-                                        <label for="password">Your Password</label>
+                                        <label for="password">Contraseña</label>
                                         <div class="input-group">
                                             <span class="input-group-text" id="basic-addon2">
                                                 <span class="fas fa-unlock-alt"></span>
@@ -47,7 +47,7 @@
                                         <span class="text-error">{{ form.password1.errors }}</span>
                                     </div>
                                     <div class="form-group mb-4">
-                                        <label for="password">Password Confirmation</label>
+                                        <label for="password">Confirmación de contraseña</label>
                                         <div class="input-group">
                                             <span class="input-group-text" id="basic-addon2">
                                                 <span class="fas fa-unlock-alt"></span>
@@ -60,19 +60,19 @@
                                         <div class="form-check">
                                             <input class="form-check-input" type="checkbox" value="" id="remember">
                                             <label class="form-check-label fw-normal mb-0" for="remember">
-                                                I agree to the <a href="#" class="fw-bold">terms and conditions</a>
+                                                Acepto los <a href="#" class="fw-bold">términos y condiciones</a>
                                             </label>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="d-grid">
-                                    <button type="submit" name="register" class="btn btn-gray-800">Sign UP</button>
+                                    <button type="submit" name="register" class="btn btn-gray-800">Registrarse</button>
                                 </div>
                             </form>
                             <div class="d-flex justify-content-center align-items-center mt-4">
                                 <span class="fw-normal">
-                                    Already have an account? 
-                                    <a href="{% url 'login' %}" class="fw-bold">Sign IN</a>
+                                    ¿Ya tienes una cuenta? 
+                                    <a href="{% url 'login' %}" class="fw-bold">Iniciar sesión</a>
                                 </span>
                             </div>
                         </div>
@@ -84,5 +84,5 @@
 
 {% endblock content %}
 
-<!-- Specific Page JS goes HERE  -->
+<!-- JS específico de la página va AQUÍ  -->
 {% block javascripts %}{% endblock javascripts %}
