Fixed deploy heroku trip -- Block register

--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -53,13 +53,13 @@
                                     <button type="submit" name="login" class="btn btn-gray-800">Iniciar Sesión</button>
                                 </div>
                             </form>
-                            <div class="d-flex justify-content-center align-items-center mt-4">
+                           <!--<div class="d-flex justify-content-center align-items-center mt-4">
                                 <span class="fw-normal">
                                     ¿No estás registrado?
                                     <a href="{% url 'register' %}" class="fw-bold">Crear cuenta</a>
                                 </span>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
