--- a/apps/templates/home/detalle_viaje.html
+++ b/apps/templates/home/detalle_viaje.html
@@ -40,40 +40,79 @@
 
     <!-- Código JavaScript para mostrar el mapa y los detalles del viaje seleccionado -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js"></script>
-    <script>
-        var map = L.map('mapid').setView([40.416775, -3.703790], 13);
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 19,
-            attribution: '© OpenStreetMap contributors'
-        }).addTo(map);
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js"></script>
+<script>
+    var map = L.map('mapid');
 
-        var geojsonData = JSON.parse('{{ viaje.geojson_data | safe }}');
-        L.geoJSON(geojsonData, {
-            style: function(feature) {
-                switch (feature.properties.event_type) {
-                    case 'route': return { color: "blue", weight: 5 };
-                    case 'harsh_acceleration': return { color: "green", weight: 5 };
-                    case 'harsh_braking': return { color: "red", weight: 5 };
-                    case 'harsh_cornering': return { color: "orange", weight: 5 };
-                    default: return { color: "grey", weight: 5 };
-                }
-            },
-            pointToLayer: function (feature, latlng) {
-                switch (feature.properties.event_type) {
-                    case 'route': return L.circleMarker(latlng, { radius: 8, fillColor: "blue", color: "#000", weight: 1, opacity: 1, fillOpacity: 0.8 });
-                    case 'harsh_acceleration': return L.circleMarker(latlng, { radius: 8, fillColor: "green", color: "#000", weight: 1, opacity: 1, fillOpacity: 0.8 });
-                    case 'harsh_braking': return L.circleMarker(latlng, { radius: 8, fillColor: "red", color: "#000", weight: 1, opacity: 1, fillOpacity: 0.8 });
-                    case 'harsh_cornering': return L.circleMarker(latlng, { radius: 8, fillColor: "orange", color: "#000", weight: 1, opacity: 1, fillOpacity: 0.8 });
-                    default: return L.circleMarker(latlng, { radius: 8, fillColor: "grey", color: "#000", weight: 1, opacity: 1, fillOpacity: 0.8 });
-                }
-            },
-            onEachFeature: function (feature, layer) {
-                layer.on('click', function () {
-                    layer.bindPopup("Tipo de evento: " + feature.properties.event_type).openPopup();
-                });
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        maxZoom: 19,
+        attribution: '© OpenStreetMap contributors'
+    }).addTo(map);
+
+    var geojsonData = JSON.parse('{{ viaje.geojson_data | safe }}');
+
+    // Crear una capa GeoJSON y añadirla al mapa
+    var geoLayer = L.geoJSON(geojsonData, {
+        style: function(feature) {
+            switch (feature.properties.event_type) {
+                case 'route': return { color: "blue", weight: 5 };
+                case 'harsh_acceleration': return { color: "green", weight: 5 };
+                case 'harsh_braking': return { color: "red", weight: 5 };
+                case 'harsh_cornering': return { color: "orange", weight: 5 };
+                default: return { color: "grey", weight: 5 };
             }
-        }).addTo(map);
-    </script>
+        },
+        pointToLayer: function (feature, latlng) {
+            switch (feature.properties.event_type) {
+                case 'route': return L.circleMarker(latlng, { radius: 8, fillColor: "blue", color: "#000", weight: 1, opacity: 1, fillOpacity: 0.8 });
+                case 'harsh_acceleration': return L.circleMarker(latlng, { radius: 8, fillColor: "green", color: "#000", weight: 1, opacity: 1, fillOpacity: 0.8 });
+                case 'harsh_braking': return L.circleMarker(latlng, { radius: 8, fillColor: "red", color: "#000", weight: 1, opacity: 1, fillOpacity: 0.8 });
+                case 'harsh_cornering': return L.circleMarker(latlng, { radius: 8, fillColor: "orange", color: "#000", weight: 1, opacity: 1, fillOpacity: 0.8 });
+                default: return L.circleMarker(latlng, { radius: 8, fillColor: "grey", color: "#000", weight: 1, opacity: 1, fillOpacity: 0.8 });
+            }
+        },
+        onEachFeature: function (feature, layer) {
+            layer.on('click', function () {
+                layer.bindPopup("Tipo de evento: " + feature.properties.event_type).openPopup();
+            });
+        }
+    }).addTo(map);
+
+    // Ajustar la vista del mapa a los límites del GeoJSON
+    map.fitBounds(geoLayer.getBounds());
+
+    var lineStringFeature = geojsonData.features.find(feature => feature.geometry && feature.geometry.type === "LineString");
+    if (lineStringFeature) {
+        var coordinates = lineStringFeature.geometry.coordinates;
+        var startCoord = coordinates[0];
+        var endCoord = coordinates[coordinates.length - 1];
+
+        // Marcador de Inicio (verde)
+        L.marker([startCoord[1], startCoord[0]], {
+            icon: L.icon({
+                iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png',
+                shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+                iconSize: [25, 41],
+                iconAnchor: [12, 41],
+                popupAnchor: [1, -34],
+                shadowSize: [41, 41]
+            })
+        }).addTo(map).bindPopup("Inicio de la ruta");
+
+        // Marcador de Fin (rojo)
+        L.marker([endCoord[1], endCoord[0]], {
+            icon: L.icon({
+                iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-red.png',
+                shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+                iconSize: [25, 41],
+                iconAnchor: [12, 41],
+                popupAnchor: [1, -34],
+                shadowSize: [41, 41]
+            })
+        }).addTo(map).bindPopup("Fin de la ruta");
+    }
+</script>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
