--- a/apps/templates/home/lista_viajes.html
+++ b/apps/templates/home/lista_viajes.html
@@ -29,7 +29,7 @@
                                 <th>Fin</th>
                                 <th>Distancia Recorrida</th>
                                 <th>Eventos Reales</th>
-                                <th>Puntuación Ecológica</th>
+                                <th>Puntuación</th>
                                 <th>Acciones</th>
                             </tr>
                         </thead>
@@ -43,7 +43,7 @@
                                 <td>{{ viaje.estacion }}</td>
                                 <td>{{ viaje.start_timestamp|date:"d/m/Y H:i" }}</td>
                                 <td>{{ viaje.end_timestamp|date:"d/m/Y H:i" }}</td>
-                                <td>{{ viaje.distancia_recorrida }}</td>
+                                <td>{{ viaje.distancia_recorrida }} km</td>
                                 <td>{{ viaje.eventos_reales }}</td>
                                 <td>{{ viaje.puntuacion_ecologica }}</td>
                                 <td>
