--- a/apps/templates/home/editar_vehiculo.html
+++ b/apps/templates/home/editar_vehiculo.html
@@ -1,22 +1,24 @@
 {% extends 'layouts/base.html' %}
 {% block content %}
 <div class="container">
-    <h2 class="mb-4">Crear Estación</h2>
+    <h2 class="mb-4">Editar Vehículo</h2>
     <form method="post" class="form">
         {% csrf_token %}
         {% for field in form %}
         <div class="mb-3">
             <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
             {% if field.field.widget.input_type == 'text' %}
-            <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" placeholder="{{ field.label }}">
+            <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" placeholder="{{ field.label }}" value="{{ field.value }}">
             {% elif field.field.widget.input_type == 'textarea' %}
-            <textarea class="form-control" id="{{ field.id_for_label }}" rows="3"></textarea>
+            <textarea class="form-control" id="{{ field.id_for_label }}" rows="3">{{ field.value }}</textarea>
             {% elif field.field.widget.input_type == 'select' %}
             <select class="form-control" id="{{ field.id_for_label }}">
                 {% for choice in field.field.choices %}
-                <option value="{{ choice.0 }}">{{ choice.1 }}</option>
+                <option value="{{ choice.0 }}" {% if field.value == choice.0 %}selected{% endif %}>{{ choice.1 }}</option>
                 {% endfor %}
             </select>
+            {% elif field.label == 'Año' %}
+            <input type="number" class="form-control" id="{{ field.id_for_label }}" placeholder="{{ field.label }}" value="{{ field.value }}">
             {% endif %}
             {% for error in field.errors %}
             <div class="alert alert-danger">{{ error }}</div>
@@ -27,4 +29,3 @@
     </form>
 </div>
 {% endblock %}
-
