--- a/apps/templates/home/lista_viajes.html
+++ b/apps/templates/home/lista_viajes.html
@@ -28,7 +28,7 @@
                                 <th>Inicio</th>
                                 <th>Fin</th>
                                 <th>Distancia Recorrida</th>
-                                <th>Eventos Reales</th>
+                                <th>Eventos</th>
                                 <th>Puntuación</th>
                                 <th>Acciones</th>
                             </tr>
