--- a/apps/templates/home/dispositivos.html
+++ b/apps/templates/home/dispositivos.html
@@ -1,28 +1,25 @@
-{% extends "layouts/base.html" %}
+{% extends "layouts/base.html" %}  <!-- Asume que tienes una plantilla base.html -->
 {% block content %}
-<div class="container mt-3">
-    <h2>Dispositivos</h2>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>IMEI</th>
-                <th>Vehículo Asociado</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for dispositivo in dispositivos %}
-            <tr>
-                <td>{{ dispositivo.imei }}</td>
-                <td>
-                    {% if dispositivo.vehiculo %}
-                        {{ dispositivo.vehiculo.matricula }}
-                    {% else %}
-                        N/A
-                    {% endif %}
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+<h2>Lista de Dispositivos</h2>
+<table>
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nombre del Dispositivo</th>
+            <th>Acciones</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for dispositivo in dispositivos %}
+        <tr>
+            <td>{{ dispositivo.id }}</td>
+            <td>{{ dispositivo.nombre }}</td>
+            <td>
+                <a href="{% url 'detalle_dispositivo' dispositivo.id %}">Ver Detalles</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
+
